force-app/main/default/objects/Activity/fields/Estado_evento__c.field-meta.xml
<CustomField>
    <fullName>Estado_evento__c</fullName>
    <label>Estado evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planificado</fullName>
            </value>
            <value>
                <fullName>Realizado</fullName>
            </value>
            <value>
                <fullName>No show</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Abierto</fullName>
                <isActive>false</isActive>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>Completada</fullName>
                <isActive>false</isActive>
                <label>Completada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>