force-app/main/default/objects/Activity/fields/IsRecordatorioActivo__c.field-meta.xml
<CustomField>
    <fullName>IsRecordatorioActivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRecordatorioActivo</label>
    <type>Checkbox</type>
</CustomField>