force-app/main/default/objects/Activity/fields/LeadPromocion__c.field-meta.xml
<CustomField>
    <fullName>LeadPromocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo lookup para relacionar la actividad con un registro LeadPromocion</description>
    <label>Lead - Promoción</label>
    <referenceTo>LeadPromocion__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>