force-app/main/default/objects/Activity/fields/NextRecordatorio__c.field-meta.xml
<CustomField>
    <fullName>NextRecordatorio__c</fullName>
    <label>NextRecordatorio</label>
    <type>Date</type>
</CustomField>