force-app/main/default/objects/Activity/fields/NumRecordatorio__c.field-meta.xml
<CustomField>
    <fullName>NumRecordatorio__c</fullName>
    <label>NumRecordatorio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>