force-app/main/default/objects/Activity/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <description>Campo para evento y tarea con resultado de la actividad</description>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Próxima tarea o evento</fullName>
            </value>
            <value>
                <fullName>No es posible contactar</fullName>
            </value>
            <value>
                <fullName>Descarte</fullName>
            </value>
            <value>
                <fullName>Atención a comprador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>