force-app/main/default/objects/Activity/fields/Resultado_contacto__c.field-meta.xml
<CustomField>
    <fullName>Resultado_contacto__c</fullName>
    <label>Resultado tras contactar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No interesado</fullName>
            </value>
            <value>
                <fullName>Volver a contactarle</fullName>
            </value>
            <value>
                <fullName>Completada su información</fullName>
            </value>
            <value>
                <fullName>Visita Fijada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>