force-app/main/default/objects/Activity/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Videollamada</fullName>
            </value>
            <value>
                <fullName>Primer contacto</fullName>
            </value>
            <value>
                <fullName>Seguimiento</fullName>
            </value>
            <value>
                <fullName>Atención a comprador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>